# origin-data-infra

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json  pyproject.toml
.claude/: mcp.json
.github/: ISSUE_TEMPLATE.md
database/schema/: 01_tables.sql  02_indexes.sql
database/seed/: sample_data.sql
database/triggers/: auto_assign_qb.sql  cascade_rules.sql  mark_sheets_dirty.sql  merchant_stats.sql
docs/: PRD.md  RESOURCES.md  apps-script.js  mcp-configuration.md  sync-setup.md  triggers-reference.md
docs/stack/: README.md  gcp-bigquery.md  gcp-storage.md  google-sheets.md  supabase-cron.md  supabase-edge-functions.md  supabase-graphql.md  supabase-python.md  supabase-queues.md  supabase-vault.md  supabase-webhooks.md
scripts/: migrate_sheets_to_supabase.py  sync_to_sheets.py  verify_setup.sql
supabase/functions/sync-to-sheets/: index.ts
supabase/migrations/: 001_initial_schema.sql  002_grant_permissions.sql
sync/apps-script/: Code.gs  appsscript.json
sync/edge-functions/sync-to-sheets/: deno.json  index.ts
