[project]
name = "origin-data-infra"
version = "0.1.0"
description = "Origin Transport Data Infrastructure - Supabase + Google Sheets sync"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Database & Sync
    "supabase>=2.0.0",
    "gspread>=6.0.0",
    "google-auth>=2.0.0",
    # AI
    "anthropic>=0.40.0",
    # Banking
    "plaid-python>=25.0.0",
    # Accounting
    "python-quickbooks>=0.9.0",
    "intuit-oauth>=1.2.0",
    # Core
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
origin = "scripts.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
